css/resume.scss
//
// Resume Styles ~ Jrod.io
//
// ==========================================================================


// Defaults
// --------------------------------------------------------------------------

$default-width      :   920px;
$default-gutters    :   0 50px;
$default-gaps       :   90px;

$header-primary     :   #0072FF;
$header-alt         :   #4E18A6;

$title-color        :   #444;
$subtitle-color     :   #333;
$summary-color      :   #888;

$title-font         :   "aktiv-grotesk-std", sans-serif-light, Helvetica, Arial, sans-serif;
$content-font       :   "proxima-nova", sans-serif-light, Helvetica, Arial, sans-serif;


// Layout
// --------------------------------------------------------------------------

* {
  margin: 0;
  padding: 0;
  user-select: none;
  -webkit-user-select: none;
}

body {
  min-width: 1020px;
  color: #111;
  font-family: $title-font;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

div, span, h1, h2, h3, h4, h5, p, li {
  cursor: default;
}

#page {
  position: relative;
  z-index: 1;
  float: left;
  width: 100%;
  height: 100%;
  background: #FFF;
  overflow: hidden;
}

.left {
  float: left;
}

.right {
  float: right;
}


// Header
// --------------------------------------------------------------------------

header {
  position: relative;
  width: 100%;
  height: 120px;
  margin-bottom: $default-gaps;
  padding-top: 30px;
  box-shadow: 10px 0 20px rgba(0,0,0,0.5);

  .inner {
    max-width: $default-width;
    height: 55px;
    margin: 0 auto;
    padding: $default-gutters;
    font-size: 26px;
    font-weight: 200;

    div {
      position: relative;
      width: 50%;
      height: 100%;
      letter-spacing: -1px;
      text-transform: uppercase;

      span {
        font-weight: 600;
      }

      &.right {

        .menu {
          position: absolute;
          top: 0;
          right: 0;
          display: block;
          width: 60px;
          height: auto;
          color: #666;
          padding: 2px 10px;
          font-size: 18px;
          text-align: center;
          letter-spacing: normal;
          border: 1px solid #EEE;
          border-radius: 6px;
          transition: box-shadow 0.3s;

          &:hover {
            cursor: pointer;
            box-shadow: inset 0 0 10px rgba(#CCC, 0.5);
          }
        }
      }
    }
  }

  .fx {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 65px;
    text-align: center;
    overflow: visible;

    &.gradient {
      background: linear-gradient(to bottom, rgba($header-primary, 1) 15%, rgba($header-alt, 1) 55%);
    }

    &.pattern {
      background: url(../img/bg-pattern.png) top left repeat;
      background-size: 32px;
      opacity: 0.5;
    }

    &.vignette {
      background: radial-gradient(ellipse at center, transparent 0%, black 100%);
    }

    svg {
      width: 124px;
      position: relative;
      top: -6px;
      overflow: visible;
    }
  }
}


// Content
// --------------------------------------------------------------------------

.content {
  max-width: $default-width;
  margin: 0 auto;
  padding: $default-gutters;

  .section {
    float: left;
    width: 100%;
    margin-bottom: $default-gaps;

    &:last-of-type {
      margin-bottom: 0;
    }

    h2 {
      float: left;
      width: 20%;
      margin-top: 5px;
      padding-bottom: 2px;
      color: $title-color;
      font-size: 13px;
      font-weight: 600;
      text-transform: uppercase;
      background: -webkit-linear-gradient(0deg, darken($header-primary, 14%), darken($header-alt, 13%));
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      -webkit-border-image: -webkit-linear-gradient(left, darken($header-primary, 14%), darken($header-alt, 13%)) 0 0 100% 0;
      border-width: 0;
      border-bottom-width: 2px;
      border-bottom-style: solid;
      border-bottom-color: $title-color;
    }

    .inner {
      float: left;
      width: 77%;
      margin-left: 3%;

      .left, .right {
        float: left;
        width: 48%;
        text-align: left;
      }

      .right {
        margin-left: 4%;
      }

      h3 {
        margin-top: 5px;
        margin-bottom: 16px;
        padding-bottom: 2px;
        color: $subtitle-color;
        font-size: 13px;
        font-weight: 600;
        text-transform: uppercase;
        background: -webkit-linear-gradient(0deg, darken($header-alt, 13%), #555);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        -webkit-border-image: -webkit-linear-gradient(left, darken($header-alt, 13%), #555) 0 0 100% 0;
        border-width: 0;
        border-bottom-width: 2px;
        border-bottom-style: solid;
        border-bottom-color: $subtitle-color;
      }

      p, ul {
        font-family: $content-font;
        font-size: 15px;
        font-weight: 300;
        text-align: justify;
        line-height: 26px;
      }

      ul {
        margin-left: 30px;
        font-size: 14px;

        li {
          list-style-type: circle;
        }
      }
    }

    &.experience, &.education {

      h3 {
        float: left;
        width: 100%;

        span > span {
          text-transform: lowercase;
        }

        .right {
          text-align: right;
        }
      }

      h4, h5 {
        font-family: $content-font;
        font-size: 15px;
      }

      h5 {
        margin-bottom: 10px;
        font-size: 14px;
        font-weight: 300;
        font-style: italic;
        color: $summary-color;
      }

      ul {
        margin-bottom: $default-gaps / 2;
        font-size: 14px;

        &:last-of-type {
          margin-bottom: 0;
        }
      }
    }

    &.education {

      h4 {

        &:first-of-type {
          margin-bottom: $default-gaps / 2;
        }
      }
    }
  }
}


// Footer
// --------------------------------------------------------------------------

footer {
  float: left;
  width: 100%;
  height: 100px;
}


// Menu
// --------------------------------------------------------------------------

#menu {
  display: none;
  visibility: hidden;
  position: fixed;
  z-index: 2;
  top: 0;
  left: 50%;
  float: left;
  width: 0;
  height: 100%;
  background: $header-primary linear-gradient(180deg, $header-primary -20%, $header-alt 75%);
  opacity: 0;
  transition: all 0.5s;

  .inner {
    position: relative;
    max-width: $default-width;
    height: 100%;
    margin: 0 auto;
    padding: $default-gutters;
  }

  &.open {
    visibility: visible;
    left: 0;
    width: 100%;
    opacity: 1;
    transition: all 0.5s;

    .close {
      opacity: 0.5;
    }

    ul {
      opacity: 1;
    }
  }

  .close {
    position: absolute;
    top: 28px;
    right: 80px;
    display: block;
    width: 40px;
    height: 40px;
    text-indent: -9999em;
    background: inline-svg-image('../img/modal-close-button-white.svg') center center no-repeat;
    opacity: 0;
    cursor: pointer;
    transition: opacity 0.3s;
    transition-delay: .5s;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-backface-visibility: hidden;
    -webkit-transform: translateZ(0);

    &:hover {
      opacity: 1;
      transition-delay: 0.1s;
    }
  }

  ul {
    position: relative;
    top: 15%;
    height: 80%;
    width: 500px;
    margin: auto;
    padding: 0;
    opacity: 0;
    transition: opacity 0.3s;
    transition-delay: 0.5s;

    li {
      text-align: center;
      list-style-type: none;

      a {
        float: left;
        width: 100%;
        padding: 7% 0;
        color: #FFF;
        font-size: 36px;
        font-weight: 200;
        text-decoration: none;
        transition: all 0.5s;

        &:hover {
          text-shadow: 0 0 10px rgba(#FFF, 0.65);
          opacity: 0.5;
          cursor: pointer;
        }
      }
    }
  }
}


// Print
// --------------------------------------------------------------------------

@media print {

  header .menu,
  header .fx,
  footer,
  #menu {
    display: none !important;
  }

  header {
    height: 80px;
    margin-bottom: 70px;
    box-shadow: none;

    .inner {
      padding: 0;
      border-bottom: 3px solid #000;
    }
  }

  h2, h3 {
    background: none !important;
    color: #000 !important;
    -webkit-text-fill-color: initial !important;
    -webkit-border-image: none !important;

    &.thrs {
      margin-top: 70px !important;
    }
  }

  .content .section {
    margin-bottom: 70px;
  }
}

